<resources>
    <string name="app_name">MyInventoryAppOne</string>

    <!-- Label for overflow menu option that inserts -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Files</string>
    <string name="editor_activity_title_new_product">Add a new Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Label for categories -->
    <string name="category_overview">Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier_name">Supplier Name</string>
    <string name="category_supplier_phone">Supplier Phone</string>

    <!-- Text hints -->
    <string name="hint_product_name">Product Name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_product_price">Product Price</string>
    <string name="hint_supplier_phone">Supplier Phone</string>


    <!-- select Supplier-->
    <string name="supplier_Jones">Bob Supplies</string>
    <string name="supplier_Wong">Wong Sources</string>
    <string name="supplier_Dmit">Dmit Sourcing LLC</string>
    <string name="title_activity_editor3">EditorActivity3</string>
    <string name="title_activity_catalog2">CatalogActivity2</string>
    <string name="title_activity_catalog">CatalogActivity</string>
    <string name="title_activity_editor">EditorActivity</string>
</resources>
